Fixing github top right cat alignment

--- a/ui/src/scss/_common.scss
+++ b/ui/src/scss/_common.scss
@@ -3,6 +3,7 @@
 html, body, #app {
 	min-height: 100%;
 	height: 100%;
+	position: relative;
 }
 
 html {
